--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My professional portfolio",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -15,8 +16,9 @@
   "bugs": {
     "url": "https://github.com/Cdplourde/portfolio_alt/issues"
   },
-  "homepage": "https://github.com/Cdplourde/portfolio_alt#readme",
+  "homepage": "https://github.com/Cdplourde/portfolio_alt",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "node-sass": "^4.9.3"
   }
 }
