--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_alt",
   "version": "1.0.0",
   "description": "My professional portfolio",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
