--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My professional portfolio",
   "main": "dist/index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "sass": "node-sass -w scss/ -o css/ --recursive",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
